Gift-Meals Translated

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,5 +1,22 @@
 {
     "deliveryLink": "ديليفري",
     "dineoutLink":"خروجات",
-    "giftmealsLink":"اكله هديه"
+    "giftmealsLink":"أكلة هدية",
+
+    "main-header": "مفيش هدية أجمل من انك تعزم صحابك أو موظفينك في الشغل على الأكل",
+    "main-paragraph": "عشان كده عملنا خدمة جديدة وهي 'أكلة هدية' طريقة بسيطة تبسط بيها صحابك وموظفينك انك تبعتلهم برومو هدية يطلبوا بيه الأكل اللي بيحبوه",
+    "button1":"ابعت هدية لموظفينك",
+    "button2":"ابعت هدية لصحابك",
+    "second-header":"كون سبب الابتسامة علي وشوش صحابك أو موظفينك",
+
+
+    "setGift":"اختار قيمة الهدية",
+    "setGiftText":"حدد ميزانيتك لكل هدية (على سبيل المثال 10 جنية).",
+    "listFriends":"دخل رقم أو أرقام التليفون",
+    "listFriendsText":"بسهولة هتقدر تدخل أرقام الموبيل عشان تبعت هدية لكل شخص من موظفينك أو صحابك.",
+    "pay":"ادفع أونلاين",
+    "payText":"أول ما تدفع المبلغ أونلاين، هييجي لصحابك رسالة نصية قصيرة تحتوي على رمز الهدية وهيجيلك منا رسالة تأكيد عبر البريد الإلكتروني لعملية الشراء.",
+    "theyReceive":"وصلت الهدية",
+    "theyReceiveText":"هييجي لصحابك رمز الهدية في رسالة نصية و يقدروا يستخدموا الهدية علي المنيوز برقم التليفون اللي انت سجلته."
+
 }
