--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -17,6 +17,20 @@
     "pay":"ادفع أونلاين",
     "payText":"أول ما تدفع المبلغ أونلاين، هييجي لصحابك رسالة نصية قصيرة تحتوي على رمز الهدية وهيجيلك منا رسالة تأكيد عبر البريد الإلكتروني لعملية الشراء.",
     "theyReceive":"وصلت الهدية",
-    "theyReceiveText":"هييجي لصحابك رمز الهدية في رسالة نصية و يقدروا يستخدموا الهدية علي المنيوز برقم التليفون اللي انت سجلته."
+    "theyReceiveText":"هييجي لصحابك رمز الهدية في رسالة نصية و يقدروا يستخدموا الهدية علي المنيوز برقم التليفون اللي انت سجلته.",
+
+    "myOrders":"طلباتي",
+    "previousOrders":"طلباتي",
+    "itemsQuantity":"عنصر",
+    "reorder":"إعادة الطلب",
+
+    "deliveryAddress":"عنوان التوصيل",
+    "paymentMethod":"طريقة الدفع",
+    "items":"الطلبات",
+    "subTitle":"إجمالي الطلبات",
+    "tax":"ضريبة",
+    "deliveryFee":"تكلفة التوصيل",
+    "orderTotal":"إجمالي الطلب",
+    "support":"الدعم"
 
 }
