header and auth and reorder gaurd fixed

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -73,6 +73,8 @@
     "Profile":"الصفحه الشخصيه",
     "Deliver":"بيوصل",
     "Change":"تغيير",
-    "FindRestaurant":"دور علي اي مطعم"
+    "FindRestaurant":"دور علي اي مطعم",
+
+    "logout":"تسجيل الخروج"
 
 }
