--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -73,7 +73,9 @@
     "Profile":"Profile",
     "Deliver":"Deliver",
     "Change":"Change",
-    "FindRestaurant":"Find a Restaurant"
+    "FindRestaurant":"Find a Restaurant",
+
+    "logout":"Logout"
     
 }
 
