--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -76,13 +76,8 @@
     "FindRestaurant":"دور علي اي مطعم",
 
     "logout":"تسجيل الخروج",
-<<<<<<< HEAD
     "trackOrder":"تابع طلبك",
-    "orderDetails":"تفاصيل الطلب"
-
-    
-=======
->>>>>>> a70724e27eafb027f6c21282c6f35fe83e050f42
+    "orderDetails":"تفاصيل الطلب",
 
 
     "Menu":"المينيو",
