--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -113,7 +113,11 @@
     "rate":"Rate",
     "comment":"Comment",
     "add":"Add",
-    "open":"Open now"
+    "open":"Open now",
+
+    "choosesize":"Choose Size",
+    "orderOnlineCard":"Order Online",
+    "liveTrack":"Live Tracking"
 
 
 }
